--- a/pages/tables/data.html
+++ b/pages/tables/data.html
@@ -986,7 +986,7 @@
                         id="select-xap-xep-name"
                         class="form-control ms-2"
                       >
-                        <option value="all">Sắp Xếp Không Theo Tên</option>
+                        <option value="all">Sắp Xếp Theo Chữ Cái Ngược</option>
                         <option value="name">Xắp Xếp Theo Tên</option>
                       </select>
                     </div>
